# cellseg_models.pytorch

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
cellseg_models_pytorch/: __init__.py
cellseg_models_pytorch/datamodules/: __init__.py  _base_datamodule.py  _basemodule.py  csmp_datamodule.py  custom_datamodule.py  downloader.py  lizard_datamodule.py  pannuke_datamodule.py
cellseg_models_pytorch/datasets/: __init__.py  _base_dataset.py  folder_dataset.py  folder_dataset_train.py  hdf5_dataset.py  pannuke.py
cellseg_models_pytorch/datasets/dataset_writers/: __init__.py  _base_writer.py  folder_writer.py  hdf5_writer.py
cellseg_models_pytorch/datasets/tests/: test_dataset.py
cellseg_models_pytorch/decoders/: __init__.py  decoder.py  decoder_stage.py  multitask_decoder.py  unet_decoder.py  unet_decoder_stage.py
cellseg_models_pytorch/decoders/long_skips/: __init__.py  cross_attn_skip.py  longskip_module.py  stem_skip.py  unet.py  unet3p.py  unetpp.py
cellseg_models_pytorch/decoders/tests/: test_decoders.py  test_merge.py
cellseg_models_pytorch/encoders/: __init__.py  _base.py  dino_vit.py  encoder.py  encoder_upsampler.py  histo_encoder.py  timm_encoder.py  unettr_encoder.py  vit_det_SAM.py
cellseg_models_pytorch/encoders/dinov2/: vision_transformer.py
cellseg_models_pytorch/encoders/sam/: __init__.py  vision_transformer.py
cellseg_models_pytorch/encoders/tests/: test_dino.py
cellseg_models_pytorch/inference/: __init__.py  _base_inferer.py  folder_dataset_infer.py  hdf5_dataset_infer.py  inferer.py  post_processor.py  predictor.py  resize_inferer.py  sliding_window_inferer.py  wsi_segmenter.py
cellseg_models_pytorch/inference/tests/: test_inference.py
cellseg_models_pytorch/losses/: __init__.py  joint_loss.py  loss_module.py  multitask_loss.py  weighted_base_loss.py
cellseg_models_pytorch/losses/criterions/: __init__.py  bce.py  ce.py  dice.py  focal.py  grad_mse.py  iou.py  mae.py  mse.py  sce.py  ssim.py  tversky.py
cellseg_models_pytorch/losses/tests/: test_jointloss.py  test_losses.py  test_multitask_loss.py
cellseg_models_pytorch/metrics/: __init__.py  binary_metrics.py  functional.py
cellseg_models_pytorch/metrics/tests/: test_binary_metrics.py  test_instance_metrics.py  test_semantic_metrics.py
cellseg_models_pytorch/models/: __init__.py
cellseg_models_pytorch/models/base/: __init__.py  _base_model.py  _base_model_inst.py  _initialization.py  _multitask_unet.py  _seg_head.py  _timm_encoder.py
cellseg_models_pytorch/models/cellpose/: __init__.py  _conf.py  cellpose.py  cellpose_unet.py
cellseg_models_pytorch/modules/: __init__.py  attention_modules.py  base_modules.py  conv_base.py  conv_block.py  conv_layer.py  metaformer.py  misc_modules.py  mlp.py  patch_embeddings.py  self_attention_modules.py  token_mixers.py  transformers.py
cellseg_models_pytorch/optimizers/: __init__.py  utils.py
cellseg_models_pytorch/postproc/: __init__.py
cellseg_models_pytorch/torch_datasets/: __init__.py  _base_dataset_train.py  folder_dataset_infer.py  folder_dataset_train.py  hdf5_dataset_infer.py  hdf5_dataset_train.py  wsi_dataset_infer.py
cellseg_models_pytorch/training/: __init__.py  lightning_experiment.py
cellseg_models_pytorch/transforms/: __init__.py  _composition.py  img_transforms.py  inst_transforms.py  norm_transforms.py
cellseg_models_pytorch/utils/: __init__.py  convolve.py  downloader.py  file_manager.py  img_utils.py  latency_benchmark.py  mask_utils.py  multiproc.py  patching.py  save_utils.py  seg_benchmark.py  spatial_ops.py  tensor_img_utlls.py  tensor_kernels.py  tensor_utils.py  thresholding.py  vectorize.py
cellseg_models_pytorch/wsi/: __init__.py  _base_reader.py  bioio_reader.py  cucim_reader.py  data.py  dearray.py  image.py  inst_merger.py  openslide_reader.py  reader.py  tiles.py  tissue.py  utils.py
changelog.d/: 20220908_130308_oskari.lehtonen.md  20220908_144856_oskari.lehtonen.md  20220923_095225_oskari.lehtonen.md  20220923_095443_oskari.lehtonen.md  20220923_100357_oskari.lehtonen.md  20221006_114649_oskari.lehtonen.md  20221006_115219_oskari.lehtonen.md  20221006_115604_oskari.lehtonen.md  20221006_115744_oskari.lehtonen.md  20221014_135037_oskari.lehtonen.md  20221014_135350_oskari.lehtonen.md  20221018_184607_oskari.lehtonen.md  20221018_184815_oskari.lehtonen.md  20221125_124720_oskari.lehtonen.md  20221201_141058_oskari.lehtonen.md  20221201_172540_oskari.lehtonen.md  20221213_155158_oskari.lehtonen.md  20221221_155406_oskari.lehtonen.md  20221222_110850_oskari.lehtonen.md  20221223_131600_oskari.lehtonen.md  20221229_130852_oskari.lehtonen.md  20230103_104635_oskari.lehtonen.md  20230113_170849_oskari.lehtonen.md  20230113_171230_oskari.lehtonen.md  20230113_171503_oskari.lehtonen.md  20230113_171853_oskari.lehtonen.md  20230113_172102_oskari.lehtonen.md  20230113_172259_oskari.lehtonen.md  20230816_171251_oskari.lehtonen.md  20230816_171535_oskari.lehtonen.md  20230816_173051_oskari.lehtonen.md  20230817_103920_oskari.lehtonen.md  20230817_153801_oskari.lehtonen.md  20230821_173459_oskari.lehtonen.md  20230824_184512_oskari.lehtonen.md  20230825_141432_oskari.lehtonen.md  20230826_114304_oskari.lehtonen.md  20230826_114827_oskari.lehtonen.md  20230826_115035_oskari.lehtonen.md  20230905_093600_oskari.lehtonen.md  (+3 more)
docker/: Dockerfile  Dockerfile.dev
examples/: lizard_nuclei_segmentation_cellpose.ipynb  pannuke_cellpose_benchmark.ipynb  pannuke_nuclei_segmentation_cellpose dinov2.ipynb  pannuke_nuclei_segmentation_cellpose.ipynb  pannuke_nuclei_segmentation_cellpose_UNI.ipynb  pannuke_nuclei_segmentation_cellpose_dinov2.ipynb  pannuke_nuclei_segmentation_cellvit.ipynb  pannuke_nuclei_segmentation_cppnet.ipynb  pannuke_nuclei_segmentation_hovernet.ipynb  pannuke_nuclei_segmentation_omnipose.ipynb  pannuke_nuclei_segmentation_stardist.ipynb  pannuke_nuclei_segmentation_stardist_provgigapath.ipynb  training.ipynb
(+121 files in other folders)
